# TaskManager

./: .gitignore  README.md  docker-compose.yml
TaskManager_back/: .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
TaskManager_back/alembic/: env.py
TaskManager_back/alembic/versions/: 24dc2571a171_add_name_and_avatar_url_to_user.py  3a20648d07f5_add_models.py  4498743e6d3d_initial_migration.py  44b3f6a78ccb_add_events_table.py  46a896fd244f_update_project_with_new_tables.py  616bead2342a_update_project_with_dates_2.py  67d1c2c0136f_add_habit_logs_table.py  8d80972aa88d_update_task_todo_structure.py  de3468f5445a_update_project_with_dates.py  f39ca4ebfad5_update_project_with_board.py  f5efaeb99e70_update_habit_structure_2.py  f75f1e9f6696_update_habit_structure.py  fa26d58eeaaf_update_project.py
TaskManager_back/app/: main.py
TaskManager_back/app/api/: auth.py  events.py  habit.py  notes.py  projects.py  search.py  tasks.py
TaskManager_back/app/core/: config.py
TaskManager_back/app/db/: base.py  session.py
TaskManager_back/app/models/: __init__.py  event.py  habit.py  habit_log.py  note.py  project.py  project_comment.py  project_file.py  tag.py  task.py  user.py
TaskManager_back/app/schemas/: event.py  habit.py  habit_log.py  note.py  project.py  project_comment.py  project_file.py  tag.py  task.py  user.py
TaskManager_back/app/services/: auth.py  habits.py
TaskManager_back/app/utils/: jwt.py
task-manager-client/: Dockerfile  package-lock.json  package.json
task-manager-client/src/: App.css  App.js  const.js  index.js
(+59 files in other folders)
